--- a/Source/SeamlessChex/SeamlessChex.csproj
+++ b/Source/SeamlessChex/SeamlessChex.csproj
@@ -14,10 +14,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
-    <PackageReference Include="RestSharp" Version="106.11.7" />
-    <PackageReference Include="RestSharp.Serializers.SystemTextJson" Version="106.11.7" />
-    <PackageReference Include="System.Text.Json" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="RestSharp" Version="107.3.0" />
+    <PackageReference Include="System.Text.Json" Version="6.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.1.46" />
+    <PackageReference Update="MinVer" Version="3.1.0" />
   </ItemGroup>
 
 </Project>
