--- a/Source/SeamlessChex/SeamlessChex.csproj
+++ b/Source/SeamlessChex/SeamlessChex.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup Label="Build">
     <TargetFramework>netstandard2.1</TargetFramework>
+    <NoWarn>$(NoWarn);CS8032</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
